# Qt6_PCR1000

./: CMakeLists.txt  README.md  aliasdisplay.cpp  aliasdisplay.h  bargraph.cpp  bargraph.h  bmdata.cpp  bmdata.h  bmtree.cpp  bmtree.h  dial.cpp  dial.h  filterctrl.cpp  filterctrl.h  filterdisplay.cpp  filterdisplay.h  freqdisplay.cpp  freqdisplay.h  keypad.cpp  keypad.h  main.cpp  main.qml.autosave  meter.cpp  meter.h  modectrl.cpp  modectrl.h  modedisplay.cpp  modedisplay.h  monitor.cpp  monitor.h  pcr1000.pro  pcrio.cpp  pcrio.h  pcrproto.h  pcrproxy.cpp  pcrproxy.h  qml.qrc  qrc  qtpcr.cpp  qtpcr.h  (+9 more)
icons/: CMakeLists.txt  CMakeLists.txt.autosave
